app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
	@apply bg-white text-black font-light
	dark:bg-black dark:text-[hsl(0,0%,80%)]
	text-[2.25rem]/[1]
	md:text-[3rem]/[1] antialiased;
}

.footer {
	@apply text-[10px]/[1] text-center py-10 mt-2 bg-[hsl(0,0%,95%)] dark:bg-[hsl(0,0%,5%)];
}

.bg-colors {
	@apply bg-white dark:bg-black;
}

h1 {
	@apply font-black text-[3.25rem]/[1.25];
}

h2 {
	@apply font-semibold text-[3.15rem]/[1.15];
}

h3 {
	@apply font-medium text-[3.05rem]/[1.05];
}

#leaderboard {
	@apply [&:first-child.Wulker]:*:text-[#80000A] [&:first-child.Wulker]:*:dark:text-[#80000A];
	@apply [&:first-child.Spuncer]:*:text-[#80000A] [&:first-child.Spuncer]:*:dark:text-[#80000A];
	@apply [&:first-child.Jrue]:*:text-[#0A2240] [&:first-child.Jrue]:*:dark:text-[#CE0E2D];
	@apply [&:first-child.Ruan]:*:text-[#F7B5CD] [&:first-child.Ruan]:*:dark:text-[#F7B5CD];
	@apply [&:first-child.Zuey]:*:text-[#80000A] [&:first-child.Zuey]:*:dark:text-[#80000A];
	/* @apply [&:first-child]:*:text-yellow-400 [&:last-child]:*:text-red-500; */
	@apply [&:last-child]:*:border-dashed [&:last-child]:*:border-t-[1px] [&:last-child]:*:border-t-[#80000A];
	@apply *:transition-colors duration-[333ms];
}

#leaderboard > a:hover,
a.player-link:hover {
	@apply bg-[#F4F4F4] dark:bg-[#0b0b0b] rounded-lg;
}

